# ante

./: .dockerignore  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.e2e  Dockerfile.qa  Dockerfile.test  LICENSE  README.md  docker-compose.qa.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.agent/agents/: backend-dev.md  code-reviewer.md  devops.md  frontend-dev.md  qa-engineer.md  strategy-dev.md
.agent/commands/: api-docs.md  arch-review.md  autopilot.md  implement-issue.md  qa-review.md  qa-sweep.md  qa-test.md
.agent/skills/: asyncio-patterns.md  contract-drift-review.md  frontend-conventions.md  generated-artifact-sync.md  lifecycle-review.md  lightweight-planning.md  module-conventions.md  receive-review.md  release.md  review-pr.md
.claude/: settings.json  settings.local.example.json
.claude/agents/: backend-dev.md  code-reviewer.md  devops.md  frontend-dev.md  qa-engineer.md  strategy-dev.md
.claude/skills/: asyncio-patterns.md  frontend-conventions.md  module-conventions.md  review-pr.md  sqlite-patterns.md
.github/: review-output.schema.json
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  refactor.yml
.github/workflows/: ci.yml  codex-branch-review.yml  lint.yml  post-merge.yml  pr-approvals.yml  publish.yml  release.yml  semantic-release.yml  test.yml
config/: secrets.env.example  system.qa.toml  system.test.toml  system.toml  system.toml.example
deploy/: ante.service  com.ante.plist
docs/: SESSION_HANDOFF.md  frontend-plan.md
docs/architecture/: README.md  module-map.md  system-diagram.md
docs/dashboard/: architecture.md  design-guide.css  design-guide.html
docs/decisions/: D-001.md  D-002.md  D-003.md  D-004.md  D-005.md  D-006.md  D-007.md  D-008.md  D-009.md  D-010.md  D-011.md  D-012.md  D-013.md  D-014.md  README.md
docs/runbooks/: 00-issue-management.md  01-development-process.md  02-agent-structure.md  03-git-workflow.md  04-ci-cd.md  05-testing.md  06-release.md  07-review-gate.md  README.md
docs/specs/: README.md
frontend/: .env.example  index.html  openapi.json  package-lock.json  package.json  vite.config.ts
frontend/scripts/: generate-types.sh
frontend/src/: App.tsx  index.css
guide/: agent.md  cli.md  dashboard.md  getting-started.md  security.md  strategy.md
scripts/: ai_review.py  e2e-entrypoint.sh  generate_cli_reference.py  generate_db_schema.py  install-service.sh  install-talib.sh  qa-entrypoint.sh  qa_seed_datasets.py  qa_seed_strategies.py  run-e2e.sh  run_ai_review.sh  run_pr_fix.sh  setup_actions_runners.sh  uninstall-service.sh  verify-install.py
src/ante/: __main__.py  main.py
strategies/: ma_crossover.py  qa_buy_signal.py  qa_external_signal.py  qa_invalid_meta.py  qa_multi_symbol.py  qa_nyse.py  qa_sample.py  rsi_mean_reversion.py  test_multi_buyer.py  test_ping_pong.py  volume_breakout.py
tests/: conftest.py
tests/e2e/: README.md  __init__.py  conftest.py  test_action_agent_lifecycle.py  test_action_approval_review.py  test_action_bot_lifecycle.py  test_action_budget.py  test_action_settings.py  test_api_endpoints.py  test_dashboard_pages.py  test_flow_approvals.py  test_flow_backtest_data.py  test_flow_bot_management.py  test_flow_login_dashboard.py  test_flow_member_management.py  test_flow_settings.py  test_flow_strategy_browse.py  test_flow_treasury.py  test_full_scenario.py  test_visual_verification.py  visual_checker.py
tests/fixtures/: __init__.py
tests/integration/: test_e2e_flow.py
tests/tc/: README.md
tests/unit/: test_account.py  test_account_api.py  test_account_cli.py  test_account_crypto.py  test_account_delete_events.py  test_account_immutable_fields.py  test_account_rules_api.py  test_api_pagination.py  test_approval.py  test_approval_api.py  test_approval_executors.py  test_approval_strategy_adopt_validator.py  test_approval_strategy_lifecycle.py  test_audit.py  test_audit_integration.py  test_auto_approve.py  test_backtest.py  test_backtest_complete_event.py  test_backtest_config.py  test_backtest_metrics.py  test_backtest_progress.py  test_backtest_run_store.py  test_backup.py  test_bot.py  test_bot_account_status.py  test_bot_api.py  test_bot_create_params.py  test_bot_delete_budget.py  test_bot_delete_positions.py  test_bot_guard.py  test_bot_manager_methods.py  test_bot_providers.py  test_bot_restart.py  test_bot_rule_init.py  test_bot_step_event.py  (+130 more)
(+696 files in other folders)
