[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ante"
version = "0.4.0"
description = "AI-Native Trading Engine"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "polars>=1.0",
    "click>=8.1",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "websockets>=13.0",
]

[project.scripts]
ante = "ante.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]
e2e = [
    "pytest>=8.0",
    "pytest-playwright>=0.6",
    "playwright>=1.40",
    "httpx>=0.27",
]

[tool.hatch.build]
artifacts = ["src/ante/web/static/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/ante"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--import-mode=importlib", "-m", "not e2e and not playwright"]
markers = [
    "e2e: E2E 테스트 (Docker 환경 필요)",
    "playwright: Playwright 브라우저 테스트",
]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_message = "chore(release): v{version}"
tag_format = "v{version}"
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "build", "chore", "ci", "docs", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
