[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ante"
version = "0.7.0"
description = "AI-Native Trading Engine"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "polars>=1.0",
    "pandas-ta>=0.4.67b0",
    "click>=8.1",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "websockets>=13.0",
    "cryptography>=44.0",
]

[project.scripts]
ante = "ante.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.5",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.27",
]

[tool.hatch.build]
artifacts = ["src/ante/web/static/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/ante"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--import-mode=importlib"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
# CI 단계적 강화: 현재는 위험 오류(attr-defined, operator, call-arg 등)만 차단
# 향후 아래 옵션을 활성화하여 strict로 전환
# disallow_untyped_defs = true
# warn_return_any = true

[tool.coverage.run]
source = ["src/ante"]
omit = ["src/ante/web/static/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_message = "chore(release): v{version}"
tag_format = "v{version}"
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "build", "chore", "ci", "docs", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
